--- a/styles/notion.css
+++ b/styles/notion.css
@@ -41,7 +41,7 @@
 
 .notion-header .notion-nav-header {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 54px auto 0;
 }
 
 .notion-nav-header-rhs {
@@ -355,6 +355,7 @@
 .notion-header {
   background: hsla(0, 0%, 100%, 0.8);
   backdrop-filter: saturate(180%) blur(16px);
+  position: fixed !important;
 }
 
 .dark-mode .notion-header {
@@ -371,7 +372,11 @@
 }
 
 .notion-bookmark:hover {
-  border-image: linear-gradient(90.68deg, #b439df 0.26%, #e5337e 102.37%);
+  /* border-image: linear-gradient(90.68deg, #b439df 0.26%, #e5337e 102.37%); */
+  /* 法环 */
+  border-image: linear-gradient(90.68deg,#D5D0B2.26%,#B8B58B 102.37%);
+  /* 月光大剑 */
+  border-image: linear-gradient(90.68deg,#88D1B9.26%,#34524D 102.37%);
   border-image-slice: 1;
 }
 
