--- a/styles/notion.css
+++ b/styles/notion.css
@@ -376,11 +376,11 @@
 }
 
 .notion-bookmark:hover {
-  /* border-image: linear-gradient(90.68deg, #b439df 0.26%, #e5337e 102.37%); */
+  border-image: linear-gradient(90.68deg, #b439df 0.26%, #e5337e 102.37%);
   /* 法环 */
   /* border-image: linear-gradient(90.68deg,#D5D0B2.26%,#B8B58B 102.37%); */
   /* 月光大剑 */
-  border-image: linear-gradient(90.68deg,#88D1B9.26%,#34524D 102.37%);
+  /* border-image: linear-gradient(90.68deg,#88D1B9.26%,#34524D 102.37%); */
   border-image-slice: 1;
 }
 
