--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -63,6 +63,10 @@
 .settings,
 .social {
   user-select: none;
+  /* 居中 */
+  position: absolute;
+  right: 50%;
+  transform: translateX(50%);
 }
 
 .settings a,
