--- a/styles/notion.css
+++ b/styles/notion.css
@@ -359,6 +359,7 @@
 /* 主页的图片成圆形 */
 .index-page .notion-page-icon-hero.notion-page-icon-image {
   border-radius: 50%;
+  box-shadow: 0 8px 40px 0 rgb(0 0 0 / 21%);
 }
 
 .index-page .notion-page-icon-hero.notion-page-icon-image span,
