--- a/styles/notion.css
+++ b/styles/notion.css
@@ -235,8 +235,8 @@
 .notion-link:focus,
 .notion-link:hover {
   border-bottom-color: transparent;
-
-  background-image: linear-gradient(90.68deg, #b439df 0.26%, #e5337e 102.37%);
+  
+  background-image: linear-gradient(90.68deg,#ECDD2F.26%,#a7a170 102.37%);
   background-repeat: no-repeat;
   background-position: 0 100%;
   background-size: 100% 0.1rem;
@@ -388,12 +388,6 @@
 }
 
 .notion-bookmark:hover {
-  /* border-image: linear-gradient(90.68deg, #b439df 0.26%, #e5337e 102.37%); */
-  /* 法环 */
-  /* border-image: linear-gradient(90.68deg,#D5D0B2.26%,#B8B58B 102.37%); */
-  /* 月光大剑 */
-  /* border-image: linear-gradient(90.68deg,#88D1B9.26%,#34524D 102.37%); */
-  /* 太阳战士 */
   border-image: linear-gradient(90.68deg,#ECDD2F.26%,#a7a170 102.37%);
   border-image-slice: 1;
 }
